feat: adding integration to slack